switch to a attachments co-located with harvest output
